--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="assets/netflixicon.ico" type="image/x-icon">
+    <meta name="google-site-verification" content="6HQ2AL6fxLGlv6os3qIhA8-nE_wCNC1TMdnpsV7A3Yk" />
 </head>
 
 <body>
