--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <section class="container">
         <div class="head">
-            <img src="log.png" alt="logo" width="200" height="120">
+            <img src="assets/" alt="logo" width="200" height="120">
             <a href="#">sign in</a>
         </div>
     </section>
